[test] Remove enrich-classpath testing dependency